--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -98,7 +98,6 @@
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "dev": "tsc -p ./tsconfig.json -w",
-    "tdd": "yarn dev & yarn test-chrome:watch",
     "prepare": "yarn clean:dist && yarn build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
@@ -109,10 +108,10 @@
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@microsoft/api-extractor": "7.24.2",
-    "@web/dev-server-import-maps": "0.1.1",
     "@web/test-runner": "0.17.0",
     "@web/test-runner-playwright": "0.10.1",
     "@types/mocha": "10.0.1",
+    "@types/sinon": "10.0.17",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "mocha": "10.2.0",
