--- a/packages/web-components/fast-element/tsconfig.json
+++ b/packages/web-components/fast-element/tsconfig.json
@@ -13,6 +13,7 @@
         "moduleResolution": "Node16",
         "types": [
             "mocha",
+            "sinon"
         ],
         "lib": [
             "DOM",
