workflow updates for playwright

--- a/.github/workflows/ci-validate-platforms.yml
+++ b/.github/workflows/ci-validate-platforms.yml
@@ -64,9 +64,7 @@ jobs:
         run: yarn prepare
 
       - name: Install playwright dependencies and browsers
-        run: |
-          yarn playwright install-deps
-          yarn playwright install
+        run: npx playwright install --with-deps
 
       - name: Run tests in changed packages
         if: ${{ github.event_name == 'pull_request' }}
