--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@microsoft/api-extractor": "7.24.2",
+    "@web/test-runner": "0.17.0",
+    "@web/test-runner-playwright": "0.10.1",
     "@types/mocha": "^7.0.2",
     "@types/webpack-env": "^1.15.2",
     "esm": "^3.2.25",
@@ -49,9 +51,7 @@
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.7.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.7.0"
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26"
