--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -262,6 +262,7 @@
     "@storybook/csf": "0.0.2--canary.0899bb7.0",
     "@storybook/html": "6.5.10",
     "@storybook/manager-webpack5": "6.5.10",
+    "@types/big.js": "^6.2.2",
     "concurrently": "^7.3.0",
     "esm": "^3.2.25",
     "express": "^4.18.1",
@@ -286,6 +287,7 @@
     "@floating-ui/dom": "^1.0.3",
     "@microsoft/fast-element": "2.0.0-beta.26",
     "@microsoft/fast-web-utilities": "^6.0.0",
+    "big.js": "^6.2.1",
     "tabbable": "^5.2.0",
     "tslib": "^2.4.0"
   },
