update codeowners for Foundation

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -39,4 +39,4 @@ build/ @janechu @nicholasrice @chrisdholt @awentzel @EisenbergEffect
 
 # Web components
 /packages/web-components/fast-element/ @EisenbergEffect @chrisdholt @janechu @nicholasrice
-/packages/web-components/fast-foundation/ @EisenbergEffect @chrisdholt @nicholasrice
+/packages/web-components/fast-foundation/ @EisenbergEffect @chrisdholt @bheston @scomea @radium-v @kingoftac
