--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,6 +7,10 @@
 # These *code owners* will be the default owners for everything in the repository.
 * @chrisdholt @janechu @nicholasrice @EisenbergEffect
 
+# All *code owners* who aren't on the "everything" list must be have ownership of
+# the change directory in order to approve PR's that include change files
+change/ @bheston @scomea @radium-v @kingoftac
+
 # File type specific owners
 # Markdown specific files
 *.md @awentzel @chrisdholt @falkicon @EisenbergEffect
