--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,10 +7,6 @@
 # These *code owners* will be the default owners for everything in the repository.
 * @chrisdholt @janechu @nicholasrice @EisenbergEffect
 
-# All *code owners* who aren't on the "everything" list must be have ownership of
-# the change directory in order to approve PR's that include change files
-/change/ @EisenbergEffect @chrisdholt @janechu @nicholasrice @bheston @scomea @radium-v @kingoftac
-
 # File type specific owners
 # Markdown specific files
 *.md @awentzel @chrisdholt @falkicon @EisenbergEffect
@@ -44,3 +40,6 @@ build/ @janechu @nicholasrice @chrisdholt @awentzel @EisenbergEffect
 # Web components
 /packages/web-components/fast-element/ @EisenbergEffect @chrisdholt @janechu @nicholasrice
 /packages/web-components/fast-foundation/ @EisenbergEffect @chrisdholt @bheston @scomea @radium-v @kingoftac
+
+# the change directory has no owners
+/change/
