chore: add code owner permissions to change directory (#6882)
* edit change dir

* tweak

* more change owners

* no change owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -40,3 +40,6 @@ build/ @janechu @nicholasrice @chrisdholt @awentzel @EisenbergEffect
 # Web components
 /packages/web-components/fast-element/ @EisenbergEffect @chrisdholt @janechu @nicholasrice
 /packages/web-components/fast-foundation/ @EisenbergEffect @chrisdholt @bheston @scomea @radium-v @kingoftac
+
+# the change directory has no owners
+/change/
