resolve tslib between packages

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       "**/@types/node",
       "**/chai",
       "**/html-minifier-terser",
-      "**/react-syntax-highlighter"
+      "**/react-syntax-highlighter",
+      "**/tslib"
     ]
   },
   "engines": {
