--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -78,6 +78,7 @@
     "ts-loader": "^9.3.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
+    "tslib": "^2.6.2",
     "typescript": "^4.7.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
