--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -75,6 +75,7 @@
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
+    "tslib": "^2.6.2",
     "typescript": "^4.7.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
