--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -226,7 +226,7 @@
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
     "build:rollup": "rollup -c",
-    "build:storybook": "build-storybook",
+    "build:storybook": "storybook build",
     "build:tsc": "tsc -p ./tsconfig.build.json",
     "prebuild": "yarn build:tsc",
     "build": "yarn build:rollup",
@@ -242,11 +242,14 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "pretest": "yarn eslint && yarn build-storybook --quiet",
+    "pretest": "yarn eslint",
     "test": "playwright test",
     "posttest:ci": "yarn doc:ci",
     "start": "yarn start:storybook",
-    "start:storybook": "start-storybook -p 6006"
+    "test:dev": "node test/server.js",
+    "watch:dev": "concurrently \"yarn:test:dev\" \"yarn:watch:rollup\"",
+    "watch:rollup": "rollup -c -w --waitForBundleInput",
+    "start:storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.5.7",
@@ -255,35 +258,41 @@
     "@microsoft/tsdoc-config": "^0.13.4",
     "@playwright/test": "^1.25.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@storybook/addon-docs": "6.5.10",
-    "@storybook/addon-essentials": "6.5.10",
-    "@storybook/addon-links": "6.5.10",
-    "@storybook/builder-webpack5": "6.5.10",
-    "@storybook/csf": "0.0.2--canary.0899bb7.0",
-    "@storybook/html": "6.5.10",
-    "@storybook/manager-webpack5": "6.5.10",
-    "concurrently": "^7.3.0",
+    "@storybook/addon-essentials": "^7.6.8",
+    "@storybook/addon-interactions": "^7.6.8",
+    "@storybook/addon-links": "^7.6.8",
+    "@storybook/blocks": "^7.6.8",
+    "@storybook/html": "^7.6.8",
+    "@storybook/html-vite": "^7.6.8",
+    "@storybook/test": "^7.6.8",
+    "concurrently": "^8.2.2",
+    "eslint-plugin-storybook": "^0.6.15",
     "esm": "^3.2.25",
-    "express": "^4.18.1",
     "expect": "29.2.1",
+    "express": "^4.18.1",
     "prettier": "2.8.8",
-    "qs": "^6.11.0",
+    "qs": "^6.11.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "resolve-typescript-plugin": "^1.2.0",
-    "rollup-plugin-filesize": "^9.1.2",
+    "rollup": "^4.9.1",
+    "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-transform-tagged-template": "^0.0.3",
-    "rollup": "^2.71.1",
+    "source-map": "^0.7.4",
     "source-map-loader": "^0.2.4",
-    "source-map": "^0.7.3",
+    "storybook": "^7.6.8",
     "svg-inline-loader": "^0.8.2",
+    "rollup-plugin-inline-svg": "^3.0.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.7.0",
+    "vite": "^5.0.10",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.0.3",
+    "@floating-ui/dom": "1.0.3",
     "@microsoft/fast-element": "2.0.0-beta.26",
     "@microsoft/fast-web-utilities": "^6.0.0",
     "tabbable": "^5.2.0",
