--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -28,6 +28,8 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
+    "@genesiscommunitysuccess/cep-fast-plugin": "5.0.2",
+    "@genesiscommunitysuccess/custom-elements-lsp": "5.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
