--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -83,7 +83,8 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26"
+    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "tslib": "^2.4.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
