--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -80,6 +80,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26"
+    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "tslib": "2.5.0"
   }
 }
