use azure login action as replacement for basic auth

--- a/.github/workflows/cd-deploy-color-staging.yml
+++ b/.github/workflows/cd-deploy-color-staging.yml
@@ -57,6 +57,11 @@ jobs:
     needs: build
 
     steps:
+    - name: 'Azure Login'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS_FAST_DESIGN }}
+
     - name: Deploy PR
       uses: actions/download-artifact@v2
       with:
