--- a/.github/workflows/cd-deploy-www-production.yml
+++ b/.github/workflows/cd-deploy-www-production.yml
@@ -44,6 +44,11 @@ jobs:
     needs: build
 
     steps:
+    - name: 'Azure Login'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS_FAST_DESIGN }}
+
     - uses: actions/download-artifact@v2
       with:
         name: ${{ env.ARTIFACT_NAME }}
