--- a/.github/workflows/ci-validate-pr.yml
+++ b/.github/workflows/ci-validate-pr.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         fetch-depth: 0
 
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16.20.0
+
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo '::set-output name=dir::$(yarn cache dir)'
