remove unused dev dependencies
- Update csf
- Fix storybook helper types
- update docs

--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
       "**/react-dom",
       "**/react-syntax-highlighter",
       "**/typescript",
-      "**/webpack",
-      "**/@storybook/builder-webpack5",
-      "**/@storybook/builder-webpack5/**"
+      "**/webpack"
     ]
   },
   "engines": {
