--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -247,7 +247,7 @@
     "start": "storybook dev -p 6006"
   },
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.5.7",
+    "@custom-elements-manifest/analyzer": "^0.9.3",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
     "@microsoft/api-extractor": "7.24.2",
     "@microsoft/tsdoc-config": "^0.13.4",
@@ -255,33 +255,21 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-links": "^8.0.0",
-    "@storybook/csf": "0.0.2--canary.0899bb7.0",
+    "@storybook/csf": "^0.1.3",
     "@storybook/html-vite": "^8.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "concurrently": "^7.3.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "esm": "^3.2.25",
     "express": "^4.18.1",
     "expect": "29.2.1",
     "prettier": "2.8.8",
     "qs": "^6.11.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "resolve-typescript-plugin": "^1.2.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-transform-tagged-template": "^0.0.3",
     "rollup": "^2.71.1",
-    "source-map-loader": "^0.2.4",
-    "source-map": "^0.7.3",
     "storybook": "^8.0.0",
-    "svg-inline-loader": "^0.8.2",
-    "ts-loader": "^7.0.2",
-    "ts-node": "^8.9.1",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.7.0",
-    "vite": "^5.1.6",
-    "wait-on": "^6.0.1"
+    "vite": "^5.1.6"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.0.3",
