--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -23,54 +23,19 @@
   "scripts": {
     "build": "tsc -p ./tsconfig.build.json",
     "clean:dist": "node ../../../build/clean.js dist",
+    "eslint": "eslint . --ext .ts",
+    "eslint:fix": "yarn eslint --fix",
     "prepare": "yarn clean:dist && yarn build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
-    "test": "yarn eslint && yarn build && yarn test-chrome:verbose",
-    "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
-    "test-chrome:debugger": "karma start karma.conf.ts --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
-    "test-chrome:verbose:debugger": "karma start karma.conf.ts --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha",
-    "test-firefox:watch": "karma start karma.conf.ts --browsers=FirefoxHeadless   --coverage --watch-extensions js",
-    "eslint": "eslint . --ext .ts,.tsx",
-    "eslint:fix": "eslint . --ext .ts,.tsx --fix",
+    "pretest": "yarn eslint && yarn build",
+    "test": "playwright test",
     "watch": "yarn build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/karma": "^6.3.3",
-    "@types/mocha": "^7.0.2",
+    "@playwright/test": "^1.41.2",
     "@microsoft/eslint-config-fast-dna": "^2.1.0",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-loader": "^4.0.0",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "3.0.2",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
-    "karma-firefox-launcher": "^2.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^7.1.2",
-    "prettier": "2.8.8",
-    "ts-loader": "^4.0.1",
+    "express": "^4.19.2",
     "typescript": "^4.7.0"
-  },
-  "dependencies": {
-    "exenv-es6": "^1.1.1"
   }
 }
