--- a/packages/utilities/fast-web-utilities/tsconfig.build.json
+++ b/packages/utilities/fast-web-utilities/tsconfig.build.json
@@ -1,9 +1,4 @@
 {
     "extends": "./tsconfig.json",
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["**/*.spec.ts"]
 }
