--- a/packages/utilities/fast-web-utilities/tsconfig.json
+++ b/packages/utilities/fast-web-utilities/tsconfig.json
@@ -6,6 +6,7 @@
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "allowJs": true,
-        "types": ["mocha", "webpack-env", "node"]
-    }
+        "lib": ["DOM", "ES2015", "ES2016.Array.Include", "ES2017.Object"],
+    },
+    "include": ["src"]
 }
