--- a/packages/web-components/fast-foundation/tsconfig.json
+++ b/packages/web-components/fast-foundation/tsconfig.json
@@ -10,8 +10,9 @@
         "importsNotUsedAsValues": "error",
         "target": "es2015",
         "module": "ESNext",
-        "moduleResolution": "Node16",
+        "moduleResolution": "NodeNext",
         "importHelpers": true,
+        "noImplicitAny": false,
         "lib": ["DOM", "ES2015", "ES2016.Array.Include", "ES2017.Object"]
     },
     "include": ["src"]
