--- a/packages/web-components/fast-ssr/tsconfig.json
+++ b/packages/web-components/fast-ssr/tsconfig.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2015",
     "module": "ES2015",
-    "moduleResolution": "Node16",
+    "moduleResolution": "NodeNext",
     "importHelpers": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
