--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -25,9 +25,10 @@
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.4",
     "@microsoft/fast-foundation": "^3.0.0-alpha.9",
-    "tslib": "^2.4.0"
+    "tslib": "2.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
     "clean-webpack-plugin": "^4.0.0",
     "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
