--- a/packages/utilities/fast-colors/package.json
+++ b/packages/utilities/fast-colors/package.json
@@ -37,12 +37,13 @@
     "watch": "yarn build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.24.2",
+    "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
-    "mocha": "^8.2.1",
-    "@microsoft/eslint-config-fast-dna": "^2.1.0",
     "eslint-config-prettier": "^8.8.0",
+    "mocha": "^8.2.1",
     "prettier": "2.8.8",
     "typescript": "^4.7.0"
   }
