--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -153,7 +153,7 @@
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.0",
+    "typescript": "~4.7.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
