--- a/packages/utilities/fast-web-utilities/tsconfig.json
+++ b/packages/utilities/fast-web-utilities/tsconfig.json
@@ -3,6 +3,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "./dist",
+        "module": "Node16",
+        "moduleResolution": "Node16",
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "allowJs": true,
