Update the tsconfig to remove export in browser test cjs

--- a/packages/web-components/fast-router/tsconfig.json
+++ b/packages/web-components/fast-router/tsconfig.json
@@ -7,7 +7,7 @@
         "noImplicitAny": false,
         "strictPropertyInitialization": false,
         "target": "es2015",
-        "module": "ESNext",
+        "module": "NodeNext",
         "importHelpers": true,
         "moduleResolution": "NodeNext",
         "types": [
