--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -242,7 +242,6 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "pretest": "yarn eslint && yarn build-storybook --quiet",
     "test": "playwright test",
     "posttest:ci": "yarn doc:ci",
     "start": "yarn start:storybook",
@@ -268,6 +267,8 @@
     "expect": "29.2.1",
     "prettier": "2.8.8",
     "qs": "^6.11.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "resolve-typescript-plugin": "^1.2.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
