Remove possibly unneccessary nohoisted storybook dependencies

--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
       "**/react/**",
       "**/react-dom",
       "**/react-syntax-highlighter",
-      "**/typescript",
-      "**/@storybook/builder-webpack5",
-      "**/@storybook/builder-webpack5/**"
+      "**/typescript"
     ]
   },
   "engines": {
