Remove the react-wrapper package (#6963)
# Pull Request

## 📖 Description

Removal of the `@microsoft/fast-react-wrapper` as this is being deprecated.

### 🎫 Issues

Closes #6952.

## 👩‍💻 Reviewer Notes

Removal of the reference in the root README.md will occur in #6944.

## ✅ Checklist

### General

<!--- Review the list and put an x in the boxes that apply. -->

- [x] I have included a change request file using `$ yarn change`
- [ ] I have added tests for my changes.
- [x] I have tested my changes.
- [ ] I have updated the project documentation to reflect my changes.
- [x] I have read the [CONTRIBUTING](https://github.com/microsoft/fast/blob/master/CONTRIBUTING.md) documentation and followed the [standards](/docs/community/code-of-conduct/#our-standards) for this project.

## ⏭ Next Steps

<!---
If there is relevant follow-up work to this PR, please list any existing issues or provide brief descriptions of what you would like to do next.
-->
- Post a deprecated message to the npm package.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
       "**/react/**",
       "**/react-dom",
       "**/react-syntax-highlighter",
-      "**/typescript",
-      "**/webpack"
+      "**/typescript"
     ]
   },
   "engines": {
