Remove eslint config package

--- a/packages/web-components/fast-element/.eslintrc.json
+++ b/packages/web-components/fast-element/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["@microsoft/eslint-config-fast-dna", "prettier"],
+    "extends": ["../../../.eslintrc"],
     "rules": {
         "max-classes-per-file": "off",
         "no-case-declarations": "off",
