--- a/package.json
+++ b/package.json
@@ -104,11 +104,15 @@
     "@types/jest": "^25.2.1",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "beachball": "^2.31.2",
     "chalk": "^2.4.2",
     "copyfiles": "^2.4.1",
     "docusaurus-init": "^1.11.0",
     "dotenv": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-import": "^2.25.0",
     "glob": "^7.1.2",
     "husky": "^4.2.5",
     "jest-mock": "29.5.0",
