--- a/packages/utilities/fast-web-utilities/.eslintrc.json
+++ b/packages/utilities/fast-web-utilities/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["@microsoft/eslint-config-fast-dna", "prettier"],
+    "extends": ["../../../.eslintrc.js"],
     "rules": {
         "import/extensions": [
             "error",
