--- a/packages/web-components/fast-router/.eslintrc.json
+++ b/packages/web-components/fast-router/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["@microsoft/eslint-config-fast-dna", "prettier"],
+    "extends": ["../../../.eslintrc.js"],
     "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-types": [
