--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "webpack --mode=production",
     "watch": "tsc -p tsconfig.json --watch",
-    "start": "yarn build && node server.js",
-    "test": "yarn build"
+    "start": "npm run build && node server.js",
+    "test": "npm run build"
   },
   "author": {
     "name": "Microsoft",
@@ -23,18 +23,16 @@
     "directory": "examples/ssr"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.4",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.9",
-    "@microsoft/fast-ssr": "^1.0.0-beta.6",
-    "clean-webpack-plugin": "^4.0.0",
+    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "@microsoft/fast-foundation": "^3.0.0-alpha.33",
+    "@microsoft/fast-ssr": "^1.0.0-beta.33",
     "express": "^4.18.1",
     "fast-todo-app": "1.0.0",
-    "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2",
-    "webpack": "^5.73.0"
+    "tslib": "^2.6.3",
+    "typescript": "~4.7.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack": "^5.92.1"
   }
 }
