--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -6,10 +6,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=production && tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && webpack --mode=production",
     "start": "webpack serve",
-    "prepare": "yarn build",
-    "test": "yarn build"
+    "test": "npm run build"
   },
   "author": {
     "name": "Microsoft",
@@ -23,18 +22,16 @@
     "directory": "examples/todo-app"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.4",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.9",
-    "tslib": "2.4.0"
+    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "@microsoft/fast-foundation": "^3.0.0-alpha.33",
+    "tslib": "^2.6.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
-    "clean-webpack-plugin": "^4.0.0",
-    "resolve-typescript-plugin": "^1.2.0",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.3",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2"
+    "typescript": "~4.7.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack": "^5.92.1"
   }
 }
