--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -91,21 +91,21 @@
     "./dist/esm/components/install-hydration.js"
   ],
   "scripts": {
-    "benchmark": "yarn clean:dist && yarn build && node ./scripts/run-benchmarks",
+    "benchmark": "npm run clean:dist && npm run build && node ./scripts/run-benchmarks",
     "clean:dist": "node ../../../build/clean.js dist",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
-    "build": "yarn build:tsc && yarn build:rollup && yarn doc",
+    "build": "npm run build:tsc && npm run build:rollup && npm run doc",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "dev": "tsc -p ./tsconfig.json -w",
-    "tdd": "yarn dev & yarn test-chrome:watch",
-    "prepare": "yarn clean:dist && yarn build",
+    "tdd": "npm run dev & npm run test-chrome:watch",
+    "prepublishOnly": "npm run clean:dist && npm run build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "yarn eslint && yarn test-chrome:verbose && yarn doc:ci",
+    "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
@@ -118,44 +118,44 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.24.2",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@microsoft/api-extractor": "^7.47.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^8.3.2",
-    "@tensile-perf/web-components": "^0.1.14",
+    "@tensile-perf/web-components": "^0.2.0",
     "@types/chai": "^4.2.11",
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
-    "@types/webpack-env": "^1.15.2",
+    "@types/webpack-env": "^1.18.5",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^16.2.2",
     "jsdom-global": "3.0.2",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
-    "karma-firefox-launcher": "^2.1.0",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-firefox-launcher": "^2.1.3",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^7.1.2",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^5.0.1",
+    "mocha": "^10.5.2",
     "prettier": "2.8.8",
     "rollup": "^2.71.1",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-filesize": "^10.0.0",
     "source-map": "^0.7.3",
-    "source-map-loader": "^3.0.1",
-    "ts-loader": "^7.0.2",
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.3.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.4.0",
+    "tslib": "^2.6.3",
     "typescript": "~4.7.0"
   }
 }
