--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -25,15 +25,15 @@
     "clean:dist": "node ../../../build/clean.js dist",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
-    "build": "tsc -p ./tsconfig.json && yarn doc",
+    "build": "tsc -p ./tsconfig.json && npm run doc",
     "dev": "tsc -p ./tsconfig.json -w",
-    "tdd": "yarn dev & yarn test-chrome:watch",
-    "prepare": "yarn clean:dist && yarn build",
+    "tdd": "npm run dev & npm run test-chrome:watch",
+    "prepublishOnly": "npm run clean:dist && npm run build",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "yarn eslint && yarn test-chrome:verbose && yarn doc:ci",
+    "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
@@ -46,7 +46,8 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.24.2",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@microsoft/api-extractor": "^7.47.0",
     "@types/chai": "^4.2.11",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
@@ -55,7 +56,6 @@
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^16.2.2",
     "jsdom-global": "3.0.2",
     "karma": "^6.4.1",
@@ -67,18 +67,18 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-source-map-support": "^1.4.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^7.1.2",
+    "karma-webpack": "^5.0.1",
+    "mocha": "^10.5.2",
     "prettier": "2.8.8",
     "source-map": "^0.7.3",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.2",
-    "ts-node": "^8.9.1",
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "tslib": "^2.6.3",
+    "typescript": "~4.7.0",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26"
