--- a/sites/site-utilities/package.json
+++ b/sites/site-utilities/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@microsoft/site-utilities",
   "version": "0.9.0",
-  "description": "Utilities for the Creator and Component Explorer sites",
+  "description": "Utilities for the documentation site",
   "sideEffects": false,
   "private": true,
-  "scripts": {
-    "generate:badges": "node ./build/badges.js",
-    "generate:icons": "node ./build/icons.js",
-    "generate:all": "yarn generate:badges && yarn generate:icons",
-    "prepare": "yarn generate:badges"
-  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
@@ -17,18 +11,5 @@
     "url": "git+https://github.com/Microsoft/fast.git"
   },
   "author": "Microsoft",
-  "license": "MIT",
-  "devDependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^15.0.1",
-    "badge-maker": "^3.2.0",
-    "chalk": "^4.1.0",
-    "csstype": "^2.5.8",
-    "eslint-config-prettier": "6.10.1",
-    "favicons": "^6.2.2",
-    "fs-extra": "^9.0.1",
-    "rimraf": "^3.0.2"
-  }
+  "license": "MIT"
 }
