add fast-element as a dev dependency to site-utilities

--- a/sites/site-utilities/package.json
+++ b/sites/site-utilities/package.json
@@ -19,6 +19,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/fast-element": "^2.0.0-beta.26",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/node": "^15.0.1",
