--- a/packages/web-components/fast-ssr/tsconfig.json
+++ b/packages/web-components/fast-ssr/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "target": "ES2015",
-    "module": "ES2015",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "importHelpers": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noEmitOnError": true,
